--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   http: ^0.13.4
+  firebase_auth: ^3.3.19
   fluttertoast: ^8.0.9
+  firebase_core: ^1.17.1
 
 dev_dependencies:
   flutter_test:
